@@ -1,3 +1,12 @@
+2001-09-15  Philippe Elie  <ph_e@club-internet.fr>
+
+	* op_events.c: some static variable to global
+	* op_user.h: export these
+
+	* oprofile.c: typo in comment
+
+	* dae/opd_proc.c: fix size of samples files
+
 2001-09-13  Dave Jones  <davej@suse.de>
 
 	* doc/oprofile.1.in:
